# school21projects

3dViewer1.0/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  widget.cpp  widget.h
3dViewer1.0/gifmaker/: Makefile  qdoc_wrapper.sh
3dViewer1.0/parser/: Doxyfile  Makefile  parser.c  parser.h  s21_matrix.c  s21_matrix.h  test.c
PythonBootcamp/Day00/: blocks.py  decypher.py  mfinder.py
PythonBootcamp/Day01/: booty.py
PythonBootcamp/Day02/: key.py  prisoners_dilema.py
PythonBootcamp/Day03/: consumer.py  exploit.py  producer.py
PythonBootcamp/Day04/: energy.py  personality.py  pressure.py
PythonBootcamp/Team00/: cache_wiki.py  shortest_path.py  wiki_cache.py
SimpleBashUtils/cat/: Makefile  s21_cat.c  s21_cat.h  tests.sh
SimpleBashUtils/grep/: Makefile  s21_grep.c  s21_grep.h  tests.sh
ccalc/datasets/: test.c  tests.check
ccalc/src/: Makefile  s21_calculate.c  s21_creditcalc.c  s21_deposit_calc.c  s21_stack.c  s21_to_curva.c  s21_to_curva.h
ccalc/src/ThisTimeforSure/: CMakeLists.txt  anotherwindow.cpp  anotherwindow.h  anotherwindow.ui  creditwindow.cpp  creditwindow.h  creditwindow.ui  depositcalc.cpp  depositcalc.h  depositcalc.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
cdecimal/: Makefile  s21_decimal.h  s21_support_functions.c
cdecimal/arithmetic/: s21_add.c  s21_div.c  s21_mul.c  s21_sub.c
cdecimal/comparison/: s21_is_equal.c  s21_is_greater.c  s21_is_greater_or_equal.c  s21_is_less.c  s21_is_less_or_equal.c  s21_is_not_equal.c
cdecimal/conversion/: s21_from_decimal_to_float.c  s21_from_decimal_to_int.c  s21_from_float_to_decimal.c  s21_from_int_to_decimal.c  s21_support_conversion.c
cdecimal/rounding/: s21_floor.c  s21_negate.c  s21_round.c  s21_truncate.c
cdecimal/tests/: test.c  test_add.c  test_decimal.c  test_decimal.h  test_floor.c  test_from_decimal_to_float.c  test_from_decimal_to_int.c  test_from_float_to_decimal.c  test_from_int_to_decimal.c  test_is_equal.c  test_is_greater.c  test_is_greater_or_equal.c  test_is_less.c  test_is_less_or_equal.c  test_is_not_equal.c  test_mul.c  test_negate.c  test_round.c  test_sub.c  test_truncate.c
cmath/: Makefile  s21_math.c  s21_math.h  s21_trigonometry.c  test.c
cmatrix/src/: Makefile  s21_calc_complements.c  s21_create_matrix.c  s21_determinant.c  s21_eq_matrix.c  s21_inverse_matrix.c  s21_matrix.h  s21_mult_matrix.c  s21_mult_number.c  s21_remove_matrix.c  s21_sub_matrix.c  s21_sum_matrix.c  s21_support_functions.c  s21_transpose.c  tests_s21_matrix.c
cppcalc/: Doxyfile  Makefile
cppcalc/Kalculator/: CMakeLists.txt  creditwindow.cpp  creditwindow.h  creditwindow.ui  depositwindow.cpp  depositwindow.h  depositwindow.ui  graphwindow.cpp  graphwindow.h  graphwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
cppcalc/controller/: controller.cc  controller.h  interface.h
cppcalc/model/: model.cc  model.h
cppcalc/test/: test.cc
cppmatrix/: Makefile  s21_matrix_oop.cc  s21_matrix_oop.h  tests_matrix_oop.cc
cstrings/: Makefile  s21_insert.c  s21_memchr.c  s21_memcmp.c  s21_memcpy.c  s21_memset.c  s21_sprintf.c  s21_sprintf.h  s21_sscanf.c  s21_sscanf.h  s21_stack.c  s21_strchr.c  s21_strcspn.c  s21_strerror.c  s21_string.h  s21_strlen.c  s21_strncat.c  s21_strncmp.c  s21_strncpy.c  s21_strpbrk.c  s21_strrchr.c  s21_strstr.c  s21_strtok.c  s21_to_lower.c  s21_to_upper.c  s21_trim.c  test.c
list_stack_que/: Makefile  s21_list.h  s21_queue.h  s21_stack.h  test.cc
swimming_pool/game_of_life/datasets/: 8.txt  glider.txt  gun.txt  pentadecathlon.txt  puffer.txt  ussr.txt
swimming_pool/game_of_life/src/: game_of_life.c
swimming_pool/pong/: pong-interactive.c  pong.c
